Fix alignment of blog author

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,3 +126,7 @@ div.sub-nav {
 li.top-nav-active > a {
 	border-bottom: 2px solid white;
 }
+
+.news .contribook_bloguser {
+	margin-right: -50px;
+}
